--- a/src/components/pages/Add/PageTwo.module.css
+++ b/src/components/pages/Add/PageTwo.module.css
@@ -69,7 +69,6 @@ button {
   margin: auto;
   margin-top: 30px;
   width: 878px;
-  
 }
 
 .name {
@@ -98,6 +97,15 @@ button {
   border: solid 1px rgb(123, 174, 216);
   padding: 15px;
 }
+.nameInputInvalid {
+  border-radius: 5px;
+  width: 380px;
+  height: 60px;
+  border: solid 1px rgb(123, 174, 216);
+  padding: 15px;
+  background-color: rgba(255, 0, 0, 0.199);
+}
+
 .hr {
   width: 878px;
   margin: auto;
@@ -110,6 +118,15 @@ button {
   border: solid 1px rgb(123, 174, 216);
   padding: 15px;
 }
+
+.nameInputNarrowInvalid {
+  border-radius: 5px;
+  width: 277px;
+  height: 60px;
+  background-color: rgba(255, 0, 0, 0.199);
+  padding: 15px;
+}
+
 .nameNarrow {
   display: flex;
   flex-direction: column;
@@ -124,10 +141,23 @@ button {
   justify-content: flex-start;
   margin: auto;
   align-items: center;
-
   gap: 60px;
+  
 }
 
+.radioButtonsDivInvalid {
+  display: flex;
+  flex: row;
+  justify-content: flex-start;
+  margin: auto;
+  align-items: center;
+  border-radius: 20px;
+
+  gap: 60px;
+  border: solid 1px rgb(123, 174, 216);
+  padding: 15px;
+  background-color: rgba(255, 0, 0, 0.199);
+}
 .radioSelect input {
   margin: 5px;
   margin-left: 0px;
@@ -146,36 +176,27 @@ button {
   margin-bottom: 25px;
 }
 
-.dateCorrection{
+.dateCorrection {
   position: relative;
   top: -36px;
-  
 }
 
-.condition{
-  
+.condition {
   margin: 20px auto 20px 80px;
- 
   margin-left: 80px;
-
 }
 
-.formEndButtons{
+.formEndButtons {
   display: flex;
   margin: auto;
   flex-direction: row;
   width: 878px;
   justify-content: space-between;
 }
-.backButton{
+.backButton {
   background-color: #4385a900;
-  color: #62A1EB;
+  color: #62a1eb;
   font-weight: 500;
   width: 20px;
-font-size: 18px;
-}
-
-.uploadButton{
-  position: relative;
-  top: -250px;
+  font-size: 18px;
 }
