--- a/src/components/pages/Add/Add.module.css
+++ b/src/components/pages/Add/Add.module.css
@@ -216,14 +216,20 @@ button {
   
   .selectInvalid {
     width: 100%;
+    min-width: 358px;
     height: 60px;
     margin: auto;
-    background-color: rgba(255, 0, 0, 0.199);
+    background-color: #ebebeb;
     padding: 10px;
     border-radius: 8px;
     margin: 20px;
+    margin-right: 10px;
     border: none;
     gap: 20px;
+    margin-bottom: 10px;
+    margin-left: 0px;
+    background-color: rgba(255, 0, 0, 0.199);
+    
   }
 
   
@@ -264,8 +270,9 @@ button {
   .nameInputInvalid {
     border-radius: 5px;
     width: 100%;
+    min-width: 358px;
     height: 60px;
-    border: solid 1px red;
+    border: solid 1px rgb(123, 174, 216);
     padding: 15px;
     background-color: rgba(255, 0, 0, 0.199);
   }
