--- a/src/components/pages/Add/List/List.css
+++ b/src/components/pages/Add/List/List.css
@@ -4,13 +4,21 @@ body {
   font-size: 0.8rem;
   line-height: 150%;
 }
-h3{
-    font-family: 'Helvetica Neue';
-font-style: normal;
-font-weight: 700;
-font-size: 34px;
-margin-bottom: 70px;
-margin-top: 80px;
+h3 {
+  font-family: "Helvetica Neue";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 34px;
+  margin-bottom: 70px;
+  margin-top: 80px;
+}
+.back {
+  position: absolute;
+  top: -40px;
+  left: 0px;
+  width: 27px;
+  height: 27px;
+  background-color: rgba(128, 128, 128, 0);
 }
 
 /* Setting up the responsive Grid container - auto-fit + minmax() */
@@ -34,7 +42,7 @@ margin-top: 80px;
   height: 205px;
   border: 1px solid #aed1ea;
   border-radius: 20px;
- margin: 26px;
+  margin: 26px;
 }
 
 /* Important step - image will spill over the container if width is not declared explicitly */
@@ -51,25 +59,86 @@ h2 {
   margin-bottom: 0.25em;
 }
 
+.laptop__details {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin: auto;
+  margin-left: 0px;
+}
+.laptop__details h2 {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 21px;
+}
 
+.laptop__details p {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 21px;
+}
 
-.laptop__details{
+@media (max-width: 768px) {
+  .back {
+    position: absolute;
+    top: -40px;
+    left: 0px;
+    width: 27px;
+    height: 27px;
+    background-color: rgba(128, 128, 128, 0);
+  }
+
+  .laptops {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
+    gap: 2em;
+    margin: 2em;
+    width: 100%;
+    width: 378px;
+    margin: auto;
+  }
+
+  .laptop {
+    background: #eafaff;
+    padding: 5px;
+    display: grid;
+
+    width: 360px;
+    height: 123px;
+    border: 1px solid #aed1ea;
+    border-radius: 20px;
+    
+    margin: auto;
+  }
+
+  .laptop__artwork {
+    width: 100%;
+    border-radius: 0.4em;
+    max-width: 164px;
+    max-height: 109px;
+    margin: auto;
+  }
+
+  .laptop__details {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     margin: auto;
     margin-left: 0px;
-}
-.laptop__details h2{
+  }
+  .laptop__details h2 {
     font-style: normal;
-font-weight: 500;
-font-size: 18px;
-line-height: 21px;
-}
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 5px;
+  }
 
-.laptop__details p{
+  .laptop__details p {
     font-style: normal;
-font-weight: 500;
-font-size: 18px;
-line-height: 21px;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 10px;
+  }
 }
