--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,17 @@
 .App {
   text-align: center;
+  font-family:'HelveticaNeue' ;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
+
+
+
+
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
