--- a/src/components/pages/Add/PageThree.module.css
+++ b/src/components/pages/Add/PageThree.module.css
@@ -54,3 +54,67 @@ p {
 .image {
   position: relative;
 }
+
+
+@media (max-width : 768px){
+  .mainDiv {
+    width: 90%;
+    height: 400px;
+    margin: auto;
+    border-radius: 8px;
+    background-color: white;
+    position: relative;
+    top: 220px;
+    padding-top: 0px;
+    
+  }
+  .background {
+    background-color: #4a4a4a;
+    height: 100vh;
+  }
+  
+  .backButton {
+    background-color: #4385a900;
+    color: #62a1eb;
+    font-weight: 500;
+    width: 20px;
+    font-size: 18px;
+    margin: auto;
+  }
+  
+  button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 18px 60px;
+  
+    width: 297px;
+    height: 50px;
+    background: #62a1eb;
+    border-radius: 8px;
+    margin-top: 20px;
+    font-size: 20px;
+  }
+  
+  
+  
+  
+  
+  p {
+    font-size: 22px;
+    color: #292929;
+    margin: 20px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 31px;
+  }
+  
+  .image {
+    position: relative;
+  }
+
+
+
+}
