--- a/src/components/pages/Add/Add.module.css
+++ b/src/components/pages/Add/Add.module.css
@@ -30,6 +30,15 @@
   justify-content: space-around;
 }
 
+.top h5 {
+  font-family: "Helvetica Neue";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  cursor: pointer;
+}
+
 .name_last_name {
   display: flex;
   flex-direction: row;
@@ -53,12 +62,10 @@
   padding: 15px;
 }
 
-.nameInput:focus{
-  border: solid 2px #6499FF;
-  outline-color: #6499FF;
+.nameInput:focus {
+  border: solid 2px #6499ff;
+  outline-color: #6499ff;
   background-color: rgba(100, 154, 255, 0.096);
-
-
 }
 
 .nameInputInvalid {
@@ -70,9 +77,8 @@
   background-color: rgba(255, 0, 0, 0.041);
 }
 
-.nameInputInvalid:focus{
-  outline-color:red ;
- 
+.nameInputInvalid:focus {
+  outline-color: red;
 }
 
 h5 {
@@ -84,9 +90,6 @@ h6 {
   font-size: smaller;
   margin-bottom: 30px;
 }
-
-
-
 
 .select {
   margin: auto;
@@ -130,24 +133,33 @@ select {
   border-radius: 5px;
   width: 878px;
   height: 60px;
-  border: solid 1px rgb(123, 174, 216);
   padding: 15px;
-  outline-color:#62a1eb;
+
+
 }
 
+.nameWideValid {
+  outline-color: #62a1eb;
+  background-color: #62a2eb0a;;
+  border: solid 1px rgb(123, 166, 216);
 
+}
+.nameWideValid:focus {
+  outline-color: #62a1eb;
+  background-color: #62a2eb27;;
+  border: solid 1px rgb(123, 166, 216);
 
-
+}
 .nameWideInvalid {
   background-color: rgba(255, 0, 0, 0.096);
   outline-color: red;
+  border: solid 1px rgb(216, 134, 123);
 }
 
-.nameWideInvalid:focus{
+.nameWideInvalid:focus {
   background-color: rgba(255, 0, 0, 0.103);
- outline-color: red;
+  outline-color: red;
 }
-
 
 .buttonDiv {
   display: flex;
@@ -170,20 +182,18 @@ button {
   color: white;
 }
 
-button:hover{
-  background-color: #317AD0;
-
+.buttonDiv button:hover {
+  background-color: #317ad0;
 }
 
-button:active{
-  background-color:#1A5DAB
+.buttonDiv button:active {
+  background-color: #1a5dab;
 }
 .logo {
   margin: 50px;
 }
 
 @media (max-width: 768px) {
-
   .form {
     margin: auto;
     width: 100%;
@@ -203,22 +213,30 @@ button:active{
     flex-direction: column;
   }
 
-  h5 {
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 20px;
-  }
+
+ .top h5 {
+  position: relative;
+  font-family: "Helvetica Neue";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  cursor: pointer;
+  width: 300px;
+  left: -20px;
+
+  
+}
 
   .back {
     position: absolute;
-    top: -40px;
-    left: 0px;
+    top: 0px;
+    left: -10px;
     width: 27px;
     height: 27px;
     background-color: rgba(128, 128, 128, 0);
   }
-  
+
   .name_last_name {
     display: flex;
     flex-direction: column;
@@ -231,7 +249,7 @@ button:active{
   .name {
     display: flex;
     flex-direction: column;
-    margin:auto;
+    margin: auto;
     gap: 8px;
   }
 
@@ -250,7 +268,7 @@ button:active{
     margin-bottom: 10px;
     margin-left: 0px;
   }
-  
+
   .selectInvalid {
     width: 100%;
     min-width: 358px;
@@ -268,23 +286,21 @@ button:active{
     background-color: rgba(255, 0, 0, 0.199);
     outline-color: red;
     border: none;
-    
   }
 
-  .selectInvalid:focus{
+  .selectInvalid:focus {
     outline-color: red;
   }
 
-  .nameInput:focus{
-  background-color: rgba(100, 154, 255, 0.096);
-  
-  border: solid 1px 6499FF;
- 
-}
+  .nameInput:focus {
+    background-color: rgba(100, 154, 255, 0.096);
 
-.nameInputInvalid:focus{
-  outline-color:red ;
-}
+    border: solid 1px 6499FF;
+  }
+
+  .nameInputInvalid:focus {
+    outline-color: red;
+  }
 
   .nameWide {
     display: flex;
@@ -305,15 +321,15 @@ button:active{
     padding: 15px;
   }
 
-  .nameWide input:focus{
-    background-color: #1a5eab21;
-  }
-
-  
   .nameWideInvalid {
-    background-color: rgba(255, 0, 0, 0.199);
+    background-color: rgba(255, 0, 0, 0.096);
+    outline-color: red;
   }
 
+  .nameWideInvalid:focus {
+    background-color: rgba(255, 0, 0, 0.103);
+    outline-color: red;
+  }
 
   .nameInput {
     border-radius: 5px;
@@ -322,9 +338,8 @@ button:active{
     height: 60px;
     border: solid 1px rgb(123, 174, 216);
     padding: 15px;
-    
   }
-  
+
   .nameInputInvalid {
     border-radius: 5px;
     width: 100%;
@@ -335,12 +350,11 @@ button:active{
     background-color: rgba(255, 0, 0, 0.199);
   }
 
-  
   .buttonDiv {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-  
+
     margin: auto;
     width: 100%;
   }
@@ -358,9 +372,7 @@ button:active{
     color: white;
   }
 
-  .logo{
+  .logo {
     display: none;
   }
 }
-
-
