--- a/src/components/pages/Add/List/List.css
+++ b/src/components/pages/Add/List/List.css
@@ -51,6 +51,8 @@ h3 {
   width: 100%;
   border-radius: 0.4em;
   max-width: 266px;
+  width: 100%;
+  max-height: 165px;
   line-height: 20px;
 }
 
