--- a/src/components/pages/Add/PageThree.module.css
+++ b/src/components/pages/Add/PageThree.module.css
@@ -59,17 +59,15 @@ p {
 @media (max-width : 768px){
   .mainDiv {
     width: 90%;
-    height: 400px;
     margin: auto;
     border-radius: 8px;
     background-color: white;
     position: relative;
-    top: 220px;
     padding-top: 0px;
     
   }
   .background {
-    background-color: #4a4a4a;
+    background-color: #ffffff;
     height: 100vh;
   }
   
@@ -80,6 +78,7 @@ p {
     width: 20px;
     font-size: 18px;
     margin: auto;
+    
   }
   
   button {
